@@ -1,3 +1,10 @@
+2008-07-22  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* xs/ClutterGstAudio.xs: Bind the get_playbin() method.
+
+	* xs/ClutterGstVideoSink.xs:
+	* xs_files_gst: Add ClutterGstVideoSink bindings.
+
 ======== Clutter 0.800 =======================================================
 2008-07-21  Emmanuele Bassi  <ebassi@openedhand.com>
 
